fixes the imgs changing routes

--- a/src/components/card.html
+++ b/src/components/card.html
@@ -1,4 +1,4 @@
 <div class="card-back card col-lg-2 col-sm-2 me-3 mb-3 " data-role="card">
-    <img class="back-image" src="/src/images/cards/card-back.png">
+    <img class="back-image" src="/memory-cards-game/src/images/cards/card-back.png" alt="The Yoogi ho back img">
     <img class="front-image">
 </div
